projet_gl/src/test/deca/syntax/invalid/ifThenElse/incorrectIfElseIfElse.deca
// Description:
//    invalid test parser for if elseif else.
//
// Resultats:
//    ligne 13 : mismatched input ')' expecting {'true', 'new', 'null', 'readInt', 'false', 'readFloat', 'this', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//
// Historique:
//    cree le 12/01/2024

{
    if(true){
        "ok";
    }else if(){
        "ko"
    }else{

    }
}